...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/entrants_list_waited_list_btn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/entrants_list_invited_btn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/entrants_list_signed_up_btn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/entrants_list_not_selected_btn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/entrants_list_cancelled_btn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/entrants_list_view_location_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
...

        <com.google.android.material.button.MaterialButton
            android:id="@+id/entrants_list_export_csv_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
...

        <LinearLayout
            android:id="@+id/not_selected_entrants_list_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
...

            <TextView
                android:id="@+id/not_selected_empty_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_entrants_in_list"
                android:textColor="@color/text_gray"
                android:textSize="16sp"
...

        <LinearLayout
            android:id="@+id/cancelled_entrants_list_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
...

            <TextView
                android:id="@+id/cancelled_empty_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cancelled_entrants_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

        <LinearLayout
            android:id="@+id/signed_up_entrants_list_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
...

            <TextView
                android:id="@+id/signed_up_empty_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/signed_up_events_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

        <LinearLayout
            android:id="@+id/invited_entrants_list_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
...

            <TextView
                android:id="@+id/invited_empty_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/invited_events_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

        <LinearLayout
            android:id="@+id/waited_list_entrants_list_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
...

            <TextView
                android:id="@+id/waited_list_empty_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/waited_list_events_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/entrants_list_sample_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
...
