...
        android:layout_marginTop="32dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/details_fragment_location">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel_entrant"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel Entrant"
            android:textColor="@color/error_red"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            style="@style/Widget.Material3.Button.TonalButton"
...
