...
    <string name="entrants_list_toggle_button_group_waited_list_button_text">Waited</string>
    <string name="entrants_list_toggle_button_group_signed_up_button_text">Accepted</string>
    <string name="entrants_list_toggle_button_group_cancelled_button_text">Cancelled</string>
    <string name="entrants_list_toggle_button_group_not_selected_button_text">Not Selected</string>
    <string name="entrants_list_toggle_button_group_invited_button_text">Invited</string>
    <string name="entrants_list_function_toggle_button_group_view_location_text">View Location</string>
    <string name="entrants_list_sample_button">Sample Winners</string>
    <string name="sample_winners_string">Sample Winners</string>
    <string name="sample_fragment_hint">Enter number here</string>
    <string name="sub_header_sample_fragment">How Many Entrants Should Be Sampled?</string>
    <string name="view_location_header_string">Entrants Map</string>
    <string name="organizer_dashboard">Organizer Dashboard</string>
    <string name="organizer_event_browser_title">Organizer Dashboard</string>
...
